<resources>
    <string name="app_name">Guess The Number</string>

    <string name="easyLevel">Easy level</string>
    <string name="mediumLevel">Medium level</string>
    <string name="hardLevel">Hard level</string>

    <string name="easyLevelForLabel">Easy</string>
    <string name="mediumLevelForLabel">Medium</string>
    <string name="hardLevelForLabel">Hard</string>

    <string name="gameDifficult">Choose game difficult</string>
    <string name="randRange">Range of randed numbers</string>
    <string name="beforeGuess">Guess my number by typing it</string>
    <string name="EtHint">Enter your number</string>
    <string name="btnGuess">Check number</string>

    <string name="congratsTitle">Congratulations!</string>
    <string name="congratsMessage">You guess my number! What do you want to do now?</string>
    <string name="congratsPositive">Play again</string>
    <string name="congratsNeutral">Go to menu</string>

    <string name="loseTitle">Sorry!</string>
    <string name="loseMessage">No this time! But don\'t give up and try again ;)</string>
    <string name="losePositive">Play again</string>
    <string name="loseNegative">Go to menu</string>

    <string name="empty">Field shouldn\'t be empty</string>

    <string name="exitTitle">Exit!</string>
    <string name="exitMessage">Are you sure to exit this level?</string>
    <string name="exitPositive">Yes, of course</string>
    <string name="exitNegative">No, I made a mistake</string>

    <string name="exitAppTitle">Exit!</string>
    <string name="exitAppMessage">Are you sure to exit the application?</string>
    <string name="exitAppPositive">Yes, of course</string>
    <string name="exitAppNegative">No, I made a mistake</string>

    <string name="myNumberTV">randed number</string>
    <string name="incorrectFormat">Incorrect format of number</string>

    <string name="lastScores">Your recent scores</string>

    <string name="tryCounter">Count of recent tries: </string>

    <string name="infoHello">Information about game</string>
    <string name="gameDescription1">The game is based on the task of guessing a number drawn by the computer, which is within the range given in the upper left corner of the screen.</string>
    <string name="gameDescription2">When playing on the easiest level, 3 lives are available. After using all the chances, an appropriate message will be displayed. At this level, the number of tries made is not saving.</string>
    <string name="gameDescription3">On medium and hard levels, gameplay is based on following the instructions above the input field. Always when you finish playing a level and exit to the menu, the number of tries made will be saved in the last results (marked with a cup icon).</string>
    <string name="gameDescription4">To exit any activity in app, just press system\'s "Back" button</string>

    <string name="horizontalGameDescription">The game is based on the task of guessing a number drawn by the computer, which is within the range given in the upper left corner of the screen.

When playing on the easiest level, 3 lives are available. After using all the chances, an appropriate message will be displayed.

On medium and hard levels, gameplay is based on following the instructions above the input field. Always when you finish playing a level and exit to the menu, the number of tries made will be saved in the last results (marked with a cup icon).

To exit any activity in app, just press system\'s  "Back" button</string>

    <string name="haveFunText">Have fun!</string>
</resources>