<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:fontFamily="@font/rubik_bubbles_regular"
        android:textAlignment="center"
        android:textColor="@color/appNameColor"
        android:textSize="26sp"
        android:letterSpacing="0.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/setDifficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gameDifficult"
        android:letterSpacing="0.265"
        android:textAlignment="center"
        android:textColor="#3F4750"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent="1" />

    <Button
        android:id="@+id/easyLevelBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="206dp"
        android:layout_height="70dp"
        android:layout_marginBottom="50dp"
        android:drawableEnd="@drawable/ic_play_arrow_24"
        android:text="@string/easyLevel"
        app:layout_constraintBottom_toTopOf="@+id/mediumLevelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/mediumLevelBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="206dp"
        android:layout_height="70dp"
        android:layout_marginBottom="50dp"
        android:drawableEnd="@drawable/ic_play_arrow_24"
        android:text="@string/mediumLevel"
        app:layout_constraintBottom_toTopOf="@+id/hardLevelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyLevelBtn"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/hardLevelBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="206dp"
        android:layout_height="70dp"
        android:drawableEnd="@drawable/ic_play_arrow_24"
        android:text="@string/hardLevel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumLevelBtn"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>